--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
   <h1>Genomgång av GitHub</h1>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="main.css">
 </html>
