--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <h1>Genomgång av GitHub</h1>
-<link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
+<head>
+    <title>En sida som handlar om mig</title>
+</head>
+<body>
+    <h1>Välkommen till Clas hemsida</h1>
+    <p>Det här är en enkel HTML-sida.</p>
+</body>
 </html>
