--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>En sida som handlar om mig</title>
+    <title>En sida om Github</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
