--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>En sida som handlar om mig</title>
 </head>
 <body>
+  <nav>
+	    		<ul>
+	        		<li><a href="/">Hem</a></li>
+		        	<li><a href="/om_mig">About</a></li>
+	    		</ul>
+			</nav>
     <h1>Välkommen till Clas hemsida</h1>
 </body>
   <h1>Genomgång av GitHub</h1>
