--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <nav>
 <ul>
 <li><a href="/">Hem</a></li>
-<li><a href="/om_mig">About</a></li>
+<li><a href="/om_mig">Om</a></li>
 </ul>
 </nav>
 <h1>Välkommen till Clas hemsida</h1>
