--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>En sida om Github</title>
+    <style>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -13,5 +14,6 @@
 <h1>Välkommen till Clas hemsida</h1>
     <h1>Välkommen till Clas hemsida</h1>
     <h2>Genomgång av GitHub</h2>
+        </style>
 </body>
 </html>
