--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </ul>
 </nav>
 <h1>Välkommen till Clas hemsida</h1>
-
-    <h2>Genomgång av GitHub</h2>
+<h2>Genomgång av GitHub</h2>
+    <p>Inälämnad av Clas</p>
 </body>
 </html>
