--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </nav>
 <h1>Välkommen till Clas hemsida</h1>
 <h2>Genomgång av GitHub</h2>
-    <p>Inälämnad av Clas</p>
+    <p>Gjord av Clas</p>
 </body>
 </html>
